Start to fix event spacing

--- a/src/Event/event-expanded.css
+++ b/src/Event/event-expanded.css
@@ -5,7 +5,6 @@
   align-items: center;
   flex-shrink: 10;
   border-left: 5px solid #6D737A;
-  width: 900px;
   overflow: hidden;
 }
 
