--- a/src/Table/index.css
+++ b/src/Table/index.css
@@ -3,10 +3,15 @@
   justify-content: space-evenly;
   flex-direction: column;
   align-items: center;
+  width: 30%;
 }
 
 .table {
   display: flex;
   width: 100%;
   justify-content: space-around;
+}
+
+.event-expanded {
+  width: 70%;
 }
